# smallbot-mcu

./: .gitignore  CMakeLists.txt  Makefile  README.md
docs/: protocol.md
sdk/RISCV/env_Eclipse/: GD32VF103xB.lds
src/: batt.c  communication.c  communication.h  config.c  debug.h  gd32vf103_libopt.h  gpio.h  main.c  motor_control.c  motor_control.h  pid.c
